--- a/github-btn.html
+++ b/github-btn.html
@@ -72,7 +72,7 @@ body {
   margin-top: -1px;
   margin-right: 4px;
   vertical-align: middle;
-  background: url(/assets/img/github-icons.png) no-repeat 0 0;
+  background: url(assets/img/github-icons.png) no-repeat 0 0;
 }
 .gh-btn:hover .gh-ico,
 .gh-btn:focus .gh-ico,
